# Modus

./: CMakeLists.txt  changes.txt  license.txt  readme.txt
doc/: modus.html
doc/html/: annotated.html  annotated.js  class_m_c_band-members.html  class_m_c_band.html  class_m_c_band.js  class_m_c_chords-members.html  class_m_c_chords.html  class_m_c_harmony_pattern-members.html  class_m_c_harmony_pattern.html  class_m_c_harmony_pattern.js  class_m_c_instrument-members.html  class_m_c_instrument.html  class_m_c_instrument.js  class_m_c_list-members.html  class_m_c_list.html  class_m_c_list.js  class_m_c_list_music-members.html  class_m_c_list_music.html  class_m_c_list_music.js  class_m_c_m_i_d_i_receiver-members.html  class_m_c_note_maps.html  (+119 more)
extensions/: mxhumanizer.cpp  mxhumanizer.h  mximproviser.cpp  mximproviser.h
include/: docgen.h  mband.h  mchords.h  mconstants.h  mharmonypattern.h  minstrument.h  mlist.h  mmidireceiver.h  modus.h  mscalepattern.h  mscales.h  mscore.h  mscript.h  msettings.h  msong.h  msoundgen.h  mstringinstrument.h  mthreads.h  mtimer.h  mtypes.h  mutils.h
modus/: CMakeLists.txt  mchords.h  mharmonypattern.cpp  mharmonypattern.h  minstrument.h  modus.h  mscales.h  mscore.cpp  mscript.cpp  mscript.h  msong.h  msoundgen.cpp  mtimer.h  mtypes.h  mutils.cpp
scripts/: def.chords.txt  def.scales.txt
src/: mband.cpp  mchords.cpp  mharmonypattern.cpp  minstrument.cpp  mmidireceiver.cpp  mscalepattern.cpp  mscales.cpp  mscore.cpp  mscript.cpp  msettings.cpp  msong.cpp  msoundgen.cpp  mstringinstrument.cpp  mtimer.cpp  mtypes.cpp  mutils.cpp
(+239 files in other folders)
